# pyskel

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
tests/: test_skeletor.py
