[tool.poetry]
name = "skeletor"
version = "0.1.0"
description = ""
authors = ["Hugh Wimberly <hugh.wimberly@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pre-commit = "^1.15"
flake8 = "^3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
